--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanilla-js-calculator",
+    "name": "canvas-sandbox",
     "version": "1.0.0",
     "description": "",
     "main": "webpack.config.js",
@@ -7,7 +7,10 @@
     "devDependencies": {
         "@types/chai": "^4.2.12",
         "@types/mocha": "^8.0.3",
+        "@typescript-eslint/eslint-plugin": "^4.1.0",
+        "@typescript-eslint/parser": "^4.1.0",
         "chai": "^4.2.0",
+        "eslint": "^7.8.1",
         "mocha": "^8.1.3",
         "ts-loader": "^8.0.3",
         "ts-node": "^9.0.0",
@@ -19,9 +22,12 @@
     },
     "scripts": {
         "build": "webpack",
-        "watch": "webpack --watch",
-        "start": "webpack-dev-server --open",
-        "test": "mocha -r ts-node/register -r tsconfig-paths/register test/**/*.spec.ts"
+        "build:watch": "webpack --watch",
+        "lint": "eslint . --ext .ts",
+        "lint:fix": "npm run lint -- --fix",
+        "server:start": "webpack-dev-server --open",
+        "test": "mocha -r ts-node/register -r tsconfig-paths/register test/**/*.spec.ts",
+        "test:watch": "npm run test -- --watch --watch-files test/**/*.ts"
     },
     "author": "",
     "license": "ISC"
